--- a/calculator/index.html
+++ b/calculator/index.html
@@ -13,6 +13,10 @@
         <div class="ans-sec"></div>
 
         <div class="key-sec">
+            <div class="red">CA</div>
+            <div>(</div>
+            <div>)</div>
+            <div class="red">C</div>
             <div>1</div>
             <div>2</div>
             <div>3</div>
@@ -25,7 +29,7 @@
             <div>8</div>
             <div>9</div>
             <div class="black">-</div>
-            <div class="red">C</div>
+            <div class="black">.</div>
             <div>0</div>
             <div class="black">=</div>
             <div class="black">+</div>
