--- a/calculator/index.html
+++ b/calculator/index.html
@@ -13,26 +13,26 @@
         <div class="ans-sec"></div>
 
         <div class="key-sec">
-            <div class="red">CA</div>
-            <div>(</div>
-            <div>)</div>
-            <div class="red">C</div>
+            <div id="red">CA</div>
+            <div id="lavender">(</div>
+            <div id="lavender">)</div>
+            <div id="red">C</div>
             <div>1</div>
             <div>2</div>
             <div>3</div>
-            <div class="black">/</div>
+            <div id="black">/</div>
             <div>4</div>
             <div>5</div>
             <div>6</div>
-            <div class="black">*</div>
+            <div id="black">*</div>
             <div>7</div>
             <div>8</div>
             <div>9</div>
-            <div class="black">-</div>
-            <div class="black">.</div>
+            <div id="black">-</div>
+            <div id="black">.</div>
             <div>0</div>
-            <div class="black">=</div>
-            <div class="black">+</div>
+            <div id="black">=</div>
+            <div id="black">+</div>
         </div>
     </div>
 
