--- a/budget app/index.html
+++ b/budget app/index.html
@@ -1,74 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Budget App</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+  <body>
+    <!-- top budget section -->
+    <div class="top-section">
+      <h2>Budget of March 2022</h2>
+      <h1>5000.00</h1>
 
-<body>
-
-  <!-- top budget section -->
-  <div class="top-section">
-    <h2>Budget of March 2022</h2>
-    <h1>5000.00</h1>
-
-    <!-- income section -->
-    <div class="inc-section">
-      <div class="inc-title">INCOME</div>
-      <div class="inc-amount">+ 15000.00</div>
-    </div>
-
-    <!-- expense section -->
-    <div class="exp-section">
-      <div class="exp-title">EXPENSE</div>
-      <div class="exp-amount">- 10000.00</div>
-      <div class="exp-percentage">17%</div>
-    </div>
-  </div>
-
-  <!-- mid form section -->
-  <div class="mid-section">
-    <form>
-      <select class="type">
-        <option value="inc">+</option>
-        <option value="exp">-</option>
-      </select>
-      <input type="text" class="desc" name="">
-      <input type="number" class="amount" name="">
-      <button type="submit">Enter</button>
-    </form>
-  </div>
-
-  <!-- bottom item section -->
-  <div class="bottom-section">
-    <!-- bottom income section -->
-    <div class="bottom-inc-section">
-      <div class="item-section">
-        <div class="item">
-          <div class="item-title">test</div>
-          <div class="item-amount">+ 1000.00</div>
+      <!-- income section -->
+      <div class="inc-section">
+        <div>
+          <div class="inc-title">INCOME</div>
+          <div class="inc-amount">+ 0.00</div>
         </div>
-        <div class="minus-button-section"><button class="minus-button">x</button></div>
+      </div>
+
+      <!-- expense section -->
+      <div class="exp-section">
+        <div>
+          <div class="exp-title">EXPENSE</div>
+          <div class="exp-amount">- 0.00</div>
+          <div class="exp-percentage">17%</div>
+        </div>
       </div>
     </div>
 
-    <!-- bottom expense section -->
-    <div class="bottom-exp-section">
-      <div class="item-section">
-        <div class="item">
-          <div class="item-title">test</div>
-          <div class="item-amount">+ 1000.00</div>
+    <!-- mid form section -->
+    <div class="mid-section">
+      <form>
+        <select class="type">
+          <option value="inc">+</option>
+          <option value="exp">-</option>
+        </select>
+        <input type="text" class="desc" name="" placeholder="Description" />
+        <input type="number" class="amount" name="" placeholder="Amount" />
+        <button type="submit" id="enter-button">Enter</button>
+      </form>
+    </div>
+
+    <!-- bottom item section -->
+    <div class="bottom-section">
+      <!-- bottom income section -->
+      <div class="bottom-inc-section">
+        <div class="bottom-inc-title">INCOME</div>
+        <div class="inc-item-section">
+          <!-- input items here -->
+          <div class="inc-item">
+            <div>
+              <h4>test</h4>
+              <p>+ 1000.00</p>
+            </div>
+            <button>x</button>
+          </div>
         </div>
-        <div class="minus-button-section"><button class="minus-button">x</button></div>
+      </div>
+
+      <!-- bottom expense section -->
+      <div class="bottom-exp-section">
+        <div class="bottom-exp-title">EXPENSE</div>
+        <div class="exp-item-section">
+          <!-- input items here -->
+          <div class="exp-item">
+            <div>
+              <h4>test</h4>
+              <p>- 1000.00</p>
+            </div>
+            <button>x</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script src="script.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
