--- a/budget app/index.html
+++ b/budget app/index.html
@@ -11,8 +11,8 @@
   <body>
     <!-- top budget section -->
     <div class="top-section">
-      <h2>Budget of March 2022</h2>
-      <h1>5000.00</h1>
+      <h2 class="budget-title">Budget of March 2022</h2>
+      <h1 class="budget">5000.00</h1>
 
       <!-- income section -->
       <div class="inc-section">
@@ -52,6 +52,7 @@
         <div class="bottom-inc-title">INCOME</div>
         <div class="inc-item-section">
           <!-- input items here -->
+          <!-- 
           <div class="inc-item">
             <div>
               <h4>test</h4>
@@ -59,6 +60,7 @@
             </div>
             <button>x</button>
           </div>
+           -->
         </div>
       </div>
 
@@ -67,6 +69,7 @@
         <div class="bottom-exp-title">EXPENSE</div>
         <div class="exp-item-section">
           <!-- input items here -->
+          <!-- 
           <div class="exp-item">
             <div>
               <h4>test</h4>
@@ -74,6 +77,7 @@
             </div>
             <button>x</button>
           </div>
+           -->
         </div>
       </div>
     </div>
