--- a/bank app/account.html
+++ b/bank app/account.html
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <!-- /////////// welcome /////////////// -->
+    <h3 id="welcome">welcome</h3>
     <!-- ///////// current balance /////////// -->
     <div id="currentBalance">
       <div>
@@ -42,7 +44,7 @@
         <!-- transfer -->
         <form id="transferForm" action="">
           <h3>Transfer Amount</h3>
-          <input type="text" placeholder="Transfer to" id="transferTo" />
+          <input type="email" placeholder="Email to" id="transferTo" />
           <input type="number" placeholder="Amount" id="transferAmount" /><br />
           <button type="submit" id="transferButton">Transfer</button>
         </form>
