--- a/bank app/signup.html
+++ b/bank app/signup.html
@@ -37,7 +37,7 @@
           id="confirm"
           required
         /><br />
-        <p id="passwordEror">Password is not matching</p>
+        <p id="passwordEror">hello world</p>
         <button id="signupButton" type="submit">Create Account</button>
       </div>
     </form>
