--- a/bank app/signup.html
+++ b/bank app/signup.html
@@ -9,22 +9,30 @@
   </head>
   <body>
     <!-- //////// signup ////////// -->
-    <form id="signupForm">
+    <div class="container">
       <div>
-        <p>Create your accout</p>
-        <p id="loginLink">Already have an account, <a href="index.html">Login</a></p>
+        <h3>Create your accout</h3>
+        <p class="loginLink">
+          Already have an account, <a href="index.html">Login</a>
+        </p>
       </div>
-      <div>
+      <form class="signupForm">
         <input type="text" placeholder="Name" id="name" required /><br />
-        <input type="email" placeholder="Email Id" id="email" required /><br />
-        <p>
-          <span id="showPassword">Show password</span
-          ><img
+        <input type="email" placeholder="Email id" id="email" required /><br />
+        <p class="showPassword">
+          <span class="passwordPara">Show password</span>
+          <img
             src="https://cdn4.iconfinder.com/data/icons/interface-line-14/32/unhide-128.png"
             alt=""
+            class="imageOne"
+          />
+          <img
+            src="https://cdn4.iconfinder.com/data/icons/interface-line-14/32/hide-128.png"
+            alt=""
+            class="imageTwo hiding"
           />
         </p>
-        <!-- https://cdn4.iconfinder.com/data/icons/interface-line-14/32/hide-128.png -->
+        
         <input
           type="password"
           placeholder="New Password"
@@ -37,10 +45,10 @@
           id="confirm"
           required
         /><br />
-        <p id="passwordEror">hello world</p>
-        <button id="signupButton" type="submit">Create Account</button>
-      </div>
-    </form>
+        <p class="passwordEror">hello world</p>
+        <input type="submit" value="Create Account" />
+      </form>
+    </div>
 
     <script src="signup.js"></script>
   </body>
