--- a/guess the number/index.html
+++ b/guess the number/index.html
@@ -11,7 +11,9 @@
 
 <body>
 
-  <p class="demo">hello world</p>
+  <div class="container">
+    
+  </div>
 
   <script src="script.js"></script>
 </body>
